add IT and implementation for find managers of employee